-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.0-beta1
-
None
-
Window 7, CMake 3.9
-
e652865365814e11dedfb4a3358ce3631ce08266
The locator in Qt Creator 4.5.0-beta1 (4.4.82) does not recognize input like file.cpp:100 to jump to line 100 in file.cpp anymore. It does work in QtCreator 4.4.1.
And I noticed another regression:
Locator results are not updated as expected when I
1. type file.cpp:
2. then delete the last character (resulting in file.cpp)
3. then delete another character (resulting in file.cp).
I'd expect the locator to find file.cpp after Step 2, but actually it is found after Step 3.
For Gerrit Dashboard: QTCREATORBUG-19129 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
209017,2 | Fix line number handling for file based locator filters | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |