Fix line number handling for file based locator filters

We need to create the regular expression based on the split off file
name, not the whole search term.

Task-number: QTCREATORBUG-19129
Change-Id: I4df375e992ce2b9a64a9c8f2c12b953f66a9444e
Reviewed-by: Orgad Shaneh <orgads@gmail.com>